--- a/portal/portal/templates/mails/base.html
+++ b/portal/portal/templates/mails/base.html
@@ -36,7 +36,7 @@
                 </td>
             </tr>
             <tr>
-                <td align="center" bgcolor="#9b59b6" style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
+                <td align="center" bgcolor="#F2EDF9" style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
                     <img src="http://ziip.es/img/logo.png" alt="ProUI Logo" width="152" height="152" style="display:block;" />
                 </td>
             </tr>
