--- a/portal/portal/templates/home.html
+++ b/portal/portal/templates/home.html
@@ -1,8 +1,3 @@
-<!-- Intro -->
-<section class="site-section site-section-light site-section-top themed-background-dark">
-    <div class="container">
-        <h1 class="text-center animation-slideDown"><i class="fa fa-envelope"></i> <strong>Test Home </strong></h1>
-        <h2 class="h3 text-center animation-slideUp">We will be happy to answer all your questions and work together!</h2>
-    </div>
-</section>
-<!-- END Intro -->
+
+
+HOME DE USUARIO
