--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -1,25 +1,17 @@
 
-<!-- Intro -->
-<section class="site-section site-section-light site-section-top themed-background-dark">
-    <div class="container">
-        <h1 class="text-center animation-slideDown"><i class="fa fa-arrow-right"></i> <strong>Log In</strong></h1>
-        <h2 class="h3 text-center animation-slideUp">Connect to your dashboard!</h2>
-    </div>
-</section>
-<!-- END Intro -->
-
 <!-- Log In -->
 <section class="site-content site-section">
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4 site-block">
                 <!-- Log In Form -->
-                <form action="login.php" method="post" id="form-log-in" class="form-horizontal">
+                <form action="doLogin" method="post" id="form-log-in" class="form-horizontal">
+                    <input type="hidden" name="csrfmiddlewaretoken" value="{{csrf_token_value}}">
                     <div class="form-group">
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
-                                <input type="email" id="login-email" name="login-email" class="form-control input-lg" placeholder="Email">
+                                <input type="email" id="login-email" name="email" class="form-control input-lg" placeholder="Email">
                             </div>
                         </div>
                     </div>
@@ -27,7 +19,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                                <input type="password" id="login-password" name="login-password" class="form-control input-lg" placeholder="Password">
+                                <input type="password" id="login-password" name="password" class="form-control input-lg" placeholder="Password">
                             </div>
                         </div>
                     </div>
@@ -36,10 +28,10 @@
                             <label class="switch switch-primary">
                                 <input type="checkbox" id="login-remember-me" name="login-remember-me" checked><span></span>
                             </label>
-                            <small>Remember me</small>
+                            <small>Recordar</small>
                         </div>
                         <div class="col-xs-6 text-right">
-                            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-arrow-right"></i> Log In</button>
+                            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-arrow-right"></i> Login</button>
                         </div>
                     </div>
                     <div class="form-group">
@@ -47,7 +39,7 @@
                     </div>
                 </form>
                 <div class="text-center">
-                    <a href="javascript:void(0)"><small>Forgot password?</small></a>
+                    <a href="javascript:void(0)"><small>Recuperar contraseña</small></a>
                 </div>
                 <!-- END Log In Form -->
             </div>
