--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -12,7 +12,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-user"></i></span>
-                                <input type="text" id="register-firstname" name="register-firstname" class="form-control input-lg" placeholder="First name">
+                                <input type="text" id="email" name="username" class="form-control input-lg" placeholder="Username" value="{{datos.username}}">
                             </div>
                         </div>
                     </div>
@@ -20,7 +20,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
-                                <input type="email" id="register-email" name="register-email" class="form-control input-lg" placeholder="Email">
+                                <input type="email" id="email" name="email" class="form-control input-lg" placeholder="Email"  value="{{datos.email}}">
                             </div>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                                <input type="password" id="register-password" name="register-password" class="form-control input-lg" placeholder="Password">
+                                <input type="password" id="password" name="password" class="form-control input-lg" placeholder="Password">
                             </div>
                         </div>
                     </div>
@@ -36,19 +36,27 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                                <input type="password" id="register-password-verify" name="register-password-verify" class="form-control input-lg" placeholder="Verify Password">
+                                <input type="password" id="password2" name="password2" class="form-control input-lg" placeholder="Verifica Password">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-xs-12">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
+                                <input type="password" id="telefono" name="telefono" class="form-control input-lg" placeholder="Telefono Movil"  value="{{datos.telefono}}">
                             </div>
                         </div>
                     </div>
                     <div class="form-group form-actions">
                         <div class="col-xs-6">
-                            <label class="switch switch-primary" data-toggle="tooltip" title="Agree to the terms">
+                            <label class="switch switch-primary" data-toggle="tooltip" title="Acepto los terminos">
                                 <input type="checkbox" id="register-terms" name="register-terms"><span></span>
                             </label>
-                            <a href="#modal-terms" data-toggle="modal" class="register-terms"><small>View Terms</small></a>
+                            <a href="#modal-terms" data-toggle="modal" class="register-terms"><small>Ver terminos</small></a>
                         </div>
                         <div class="col-xs-6 text-right">
-                            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Sign Up</button>
+                            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-plus"></i> Aceptar</button>
                         </div>
                     </div>
                 </form>
