Correccion urls, y campo email en login y registro

--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -44,7 +44,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-asterisk"></i></span>
-                                <input type="password" id="telefono" name="telefono" class="form-control input-lg" placeholder="Telefono Movil"  value="{{datos.telefono}}">
+                                <input type="text" id="telefono" name="telefono" class="form-control input-lg" placeholder="Telefono Movil"  value="{{datos.telefono}}">
                             </div>
                         </div>
                     </div>
