--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -26,7 +26,7 @@
                     <div class="form-group form-actions">
                         <div class="col-xs-6">
                             <label class="switch switch-primary">
-                                <input type="checkbox" id="login-remember-me" name="login-remember-me" checked><span></span>
+                                <input type="checkbox" id="login-remember-me" name="recordar" checked><span></span>
                             </label>
                             <small>Recordar</small>
                         </div>
