--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -64,7 +64,7 @@
                     <div class="form-group">
                         <div class="col-xs-12">
                             <div class="input-group">
-                                <label>Sexo</label>
+                                <label>Sexo: </label>
                                 <label class="radio-inline" for="checkout-payment-paypal">
                                     <input type="radio" id="sexo" name="sexo" value="1">Hombre
                                 </label>
