--- a/portal/portal/templates/registro.html
+++ b/portal/portal/templates/registro.html
@@ -78,7 +78,7 @@
                     <div class="form-group form-actions">
                         <div class="col-xs-6">
                             <label class="switch switch-primary" data-toggle="tooltip" title="Acepto los terminos">
-                                <input type="checkbox" id="register-terms" name="register-terms"><span></span>
+                                <input type="checkbox" id="register-terms" name="condiciones" value="1"><span></span>
                             </label>
                             <a href="#modal-terms" data-toggle="modal" class="register-terms"><small>Ver terminos</small></a>
                         </div>
