--- a/portal/portal/templates/contactos.html
+++ b/portal/portal/templates/contactos.html
@@ -14,7 +14,7 @@
                     <tr>
                         <td style="width: 200px;">
                           {%if contacto.usuario2.imagen %}
-                            <img src="contacto.usuario2.imagen.url" alt="" style="width: 180px;">
+                            <img src="{{contacto.usuario2.imagen.url}}" alt="" style="width: 180px;">
                             {% endif %}
                         </td>
                         <td>
