--- a/portal/portal/templates/recientes.html
+++ b/portal/portal/templates/recientes.html
@@ -23,10 +23,10 @@
                         </td>
                         <td>
 
-                          {{reciente.reciente.contacto_nombre}} {{reciente.reciente.contacto_contacto}}
+                          {{reciente.contacto_nombre}} {{reciente.contacto_contacto}}
                           {% ifequal reciente.tipo "3" %}
                           <br>
-                          {{reciente.reciente.contacto2_nombre}} {{reciente.reciente.contacto2_contacto}}
+                          {{reciente.contacto2_nombre}} {{reciente.contacto2_contacto}}
                           {% endifequal %}
                         </td>
                         <td>
