--- a/portal/portal/templates/head.html
+++ b/portal/portal/templates/head.html
@@ -65,6 +65,9 @@
                     <li>
                         <a href="ajustes">Ajustes</a>
                     </li>
+                    <li>
+                        <a href="logout">Logout</a>
+                    </li>
 
 
 
