--- a/portal/portal/templates/peticionEnviada.html
+++ b/portal/portal/templates/peticionEnviada.html
@@ -1,10 +1,11 @@
+
 <section class="site-content site-section">
     <div class="container">
 
       <div class="row">
           <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4 site-block">
               <div class="alert alert-warning">
-                  Movil correctamente confirmado.
+                  Petición enviada correctamente
               </div>
           </div>
       </div>
