--- a/portal/portal/templates/chat.html
+++ b/portal/portal/templates/chat.html
@@ -1,14 +1,16 @@
+
+<!-- Log In -->
 <section class="site-content site-section">
     <div class="container">
 
       <div class="row">
           <div class="col-sm-6 col-sm-offset-3 col-lg-4 col-lg-offset-4 site-block">
               <div class="alert alert-warning">
-                  Movil correctamente confirmado.
+                  Chat en desarrollo
               </div>
           </div>
       </div>
 
-        <hr>
     </div>
 </section>
+<!-- END Log In -->
