--- a/portal/portal/templates/login.html
+++ b/portal/portal/templates/login.html
@@ -22,7 +22,7 @@
                         <div class="col-xs-12">
                             <div class="input-group">
                                 <span class="input-group-addon"><i class="gi gi-envelope"></i></span>
-                                <input type="text" id="login-email" name="email" class="form-control input-lg" placeholder="Email">
+                                <input type="text"  name="usuario" class="form-control input-lg" placeholder="Usuario">
                             </div>
                         </div>
                     </div>
