--- a/portal/portal/templates/head.html
+++ b/portal/portal/templates/head.html
@@ -8,7 +8,7 @@
         <div class="container">
             <!-- Site Logo -->
             <a href="/" class="site-logo">
-                <i class="gi gi-flash"></i> <strong>Ziip</strong>.es
+                <img src="img/icon57.png"><strong>Ziip</strong>.es
             </a>
             <!-- Site Logo -->
 
@@ -90,7 +90,7 @@
     </header>
     <!-- END Site Header -->
     <!-- Media Container -->
-    <div class="media-container">
+    <div class="media-container themed-background-amethyst">
         <!-- Intro -->
         <section class="site-section site-section-light site-section-top">
             <div class="container">
