--- a/portal/portal/templates/mails/peticion.html
+++ b/portal/portal/templates/mails/peticion.html
@@ -1,7 +1,7 @@
 Ziip.es la primera plataforma de contactos completamente anónima<br><br>
 
 
-El mensaje es:<br>
+El usuario {{username}} te ha enviado un mensaje:<br>
 {{mensaje_anonimo}}
 
 <br><br>
