--- a/portal/portal/templates/peticion.html
+++ b/portal/portal/templates/peticion.html
@@ -8,7 +8,9 @@
               <br><br>
 
               <!--<button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-arrow-right"></i> Ver menaje privado</button>-->
-              <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver menaje privado</a>
+              <a href="peticionPrivado?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Ver menaje privado</a><br>
+              <a href="rechazarContactoPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar Contacto</a><br>
+              <a href="rechazarZiipPeticion?peticion={{peticion.codigo}}" class="btn btn-sm btn-primary"></i> Rechazar todos los mensajes de Ziip</a>
 
             </div>
         </div>
