--- a/portal/portal/templates/footer.html
+++ b/portal/portal/templates/footer.html
@@ -1,6 +1,6 @@
 
     <!-- Footer -->
-    <footer class="site-footer site-section">
+    <footer class="site-footer site-section themed-background-dark-amethyst">
         <div class="container">
             <!-- Footer Links -->
             <div class="row">
