--- a/portal/portal/templates/head.html
+++ b/portal/portal/templates/head.html
@@ -8,7 +8,7 @@
         <div class="container">
             <!-- Site Logo -->
             <a href="/" class="site-logo">
-                <img src="img/icon57.png"><strong>Ziip</strong>.es
+                <img src="img/icon57.png">
             </a>
             <!-- Site Logo -->
 
