--- a/portal/portal/templates/ziip.html
+++ b/portal/portal/templates/ziip.html
@@ -9,10 +9,10 @@
                     <tr>
                         <td style="width: 200px;">
 
-                            <a href="/anonimo">{{"1"|imagenTipo|safe}}</a>
+                            <a href="/anonimo" >{{"1"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/anonimo">Mensaje Anonimo</a>
+                          <a href="/anonimo" class="acciones">Mensaje Anonimo</a>
                         </td>
 
                     </tr>
@@ -22,7 +22,7 @@
                             <a href="/conecta">{{"2"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/conecta">Conecta</a>
+                          <a href="/conecta" class="acciones">Conecta</a>
                         </td>
 
                     </tr>
@@ -31,7 +31,7 @@
                             <a href="/celestino">{{"3"|imagenTipo|safe}}</a>
                         </td>
                         <td>
-                          <a href="/celestino">Celestino</a>
+                          <a href="/celestino" class="acciones">Celestino</a>
                         </td>
 
                     </tr>
