--- a/portal/portal/templates/mails/conecta.html
+++ b/portal/portal/templates/mails/conecta.html
@@ -1,3 +1,3 @@
-Te ha invitado a usar nuestra aplicación.<br>
+El usuario {{username}} te ha invitado a usar nuestra aplicación.<br>
 Primera plataforma de contacto anónima.<br>
 http://ziip.es/
